yt-dlp-backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yt-dlp-backend
  namespace: yt-dlp-backend
  labels:
    app: yt-dlp-backend
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: yt-dlp-backend
  template:
    metadata:
      labels:
        app: yt-dlp-backend
    spec:
      containers:
        - name: yt-dlp-backend
          image: ghcr.io/wololo-aeyoyo/yt-dlp-backend:main-20260913140921 # {"$imagepolicy": "flux-system:yt-dlp-backend"}
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 3Gi
