yt-dlp-backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yt-dlp-backend
  namespace: yt-dlp-backend
spec:
  selector:
    app: yt-dlp-backend
  type: ClusterIP
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      protocol: TCP
